--- a/random_forest_big_dataset_final.ipynb
+++ b/random_forest_big_dataset_final.ipynb
@@ -1837,6 +1837,9 @@
    "source": [
     "accuracyCV = cross_val_score(bestF, X_train, Y_train, cv = 10, scoring = 'accuracy')\n",
     "\n",
+    "print()\n",
+    "print(\"*\"*50)\n",
+    "print(\"\\n\\n\")\n",
     "print(\"Cross Validation Scores\")\n",
     "plt.plot(accuracyCV, '.-b', label=\"Accuracy CV\")\n",
     "plt.ylabel('Accuracy score')\n",
@@ -1851,7 +1854,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Test Set Performances"
+    "##### Best Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_depth :  15\n",
+      "max_features :  3\n",
+      "n_estimators :  64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (k,i) in bestF.best_params_.items():\n",
+    "    print(k,\": \",i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test Set and Cross Vaidation Performances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Test Set"
    ]
   },
   {
@@ -1900,8 +1937,10 @@
     }
    ],
    "source": [
-    "model = RandomForestClassifier(random_state=50, criterion='gini', n_estimators=bestF.best_estimator_.n_estimators,\n",
-    "              max_features=bestF.best_estimator_.max_features)\n",
+    "model = RandomForestClassifier(random_state=50, criterion='gini',\n",
+    "                               n_estimators=bestF.best_estimator_.n_estimators,\n",
+    "                               max_features=bestF.best_estimator_.max_features,\n",
+    "                               max_depth=bestF.best_estimator_.max_depth)\n",
     "\n",
     "model = model.fit(X_train, Y_train)\n",
     "prediction = model.predict(X_test)\n",
@@ -1913,34 +1952,15 @@
     "\n",
     "model = None\n",
     "prediction = None\n",
-    "accuracy = None"
+    "accuracy = None\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Best Hyperparameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max_depth :  15\n",
-      "max_features :  3\n",
-      "n_estimators :  64\n"
-     ]
-    }
-   ],
-   "source": [
-    "for (k,i) in bestF.best_params_.items():\n",
-    "    print(k,\": \",i)"
+    "##### Cross Validation"
    ]
   },
   {
@@ -1948,7 +1968,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = RandomForestClassifier(random_state=50, criterion='gini',\n",
+    "                               n_estimators=bestF.best_estimator_.n_estimators,\n",
+    "                               max_features=bestF.best_estimator_.max_features,\n",
+    "                               max_depth=bestF.best_estimator_.max_depth)\n",
+    "\n",
+    "accuracyCV = cross_val_score(model, X_scaled, Y, cv = 10, scoring = 'accuracy')\n",
+    "print(\"Cross Validation Scores\")\n",
+    "plt.plot(accuracyCV, '.-b', label=\"Accuracy CV\")\n",
+    "plt.ylabel('Accuracy score')\n",
+    "plt.show()\n",
+    "print(\"CV Mean Accuracy Score:\", np.round(100*np.mean(accuracyCV), 3), \"%\")\n",
+    "print(\"CV STD Accuracy Score:\", np.round(100*np.std(accuracyCV), 3), \"%\"))\n",
+    "model = None\n",
+    "accuracyCV = None"
+   ]
   }
  ],
  "metadata": {
